--- a/index.css
+++ b/index.css
@@ -49,6 +49,7 @@ body{ -webkit-touch-callout:none;}
 }
 .mainimg .sample .img_all img{
     width:25%;
+    padding:15px;
 }
 
 .mainimg .sample1{
@@ -78,4 +79,35 @@ body{ -webkit-touch-callout:none;}
 }
 .mainimg .sample1 .img_all img{
     width:25%;
+    padding:15px;
+}
+
+
+.mainimg .sample2{
+    width:90%;
+    margin: 0 auto;
+    text-align:center;
+}
+.mainimg .sample2 h1{
+    width:20%;
+    display:block;
+    margin:2% auto;
+    text-align: center;
+    background:#28849A;
+    color:#fff;
+    font-weight: 300;
+    font-family: 'Gaegu', cursive;
+    padding: 15px 0;
+}
+.mainimg .sample2 .img_all{
+    display:none;
+    background:#BACED3;
+    padding:3% 0;
+}
+.mainimg .sample2 .img_all.active{
+    display:block;
+}
+.mainimg .sample2 .img_all img{
+    width:25%;
+    padding:15px;
 }
